--- a/div_html/src/log4j.properties
+++ b/div_html/src/log4j.properties
@@ -79,6 +79,7 @@ log4j.appender.file.DatePattern = '.'yyyy-MM-dd
 # 마이바티스 로딩 설정... mapper뒤에는 namespace
 log4j.logger.orm.mybatis.mapper.empMapper=TRACE
 log4j.logger.orm.mybatis.mapper.deptMapper=TRACE
+log4j.logger.orm.mybatis.mapper.bookMapper=TRACE
 
 #출력 Layout설정 : 호출하는 시간, 파일명등 출력
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
